# cython_talk

./: README.md
code/: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  setup.py
code/cython/allocation/: optimized.py
code/cython/lettercount/: optimized.py
code/cython/loop/: optimized.py
code/cython/pi/: optimized.py
code/src/allocation/: original.py
code/src/lettercount/: original.py
code/src/loop/: original.py
code/src/pi/: original.py
cython_slides/: README.md  package.json  pnpm-lock.yaml  slides.md  style.css
cython_slides/components/: Loop1.vue
cython_slides/html/: loop_1.html
