[project]
name = "cython_demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "cython>=3.0.12",
    "ipython>=9.0.2",
    "line-profiler>=4.2.0",
    "richbench>=1.0.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
    "setuptools>=78.0.2",
]

[tool.ruff]
required-version = "==0.11.2"
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "C90", # mccabe
    "I",   # isort
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "TID", # flake8-tidy-imports
    "INT", # flake8-gettext
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports
ban-relative-imports = "all"
